--- a/style/style.css
+++ b/style/style.css
@@ -122,6 +122,9 @@ button{
     *{
         font-size:calc(5px + 1.5vw);
     }
+    body{
+        height:90vh;
+    }
     
     .color-background{
         width:100%;
