--- a/style/style.css
+++ b/style/style.css
@@ -48,7 +48,7 @@ section{
     border-radius:8px;
     margin:1em;
     height:20vw;
-    min-height:10em;
+    min-height:11em;
     width:70%;
     min-width: 250px;
 }
@@ -120,7 +120,7 @@ button{
 @media screen and (max-width:800px){
 
     *{
-        font-size:calc(5px + 1.5vw);
+        font-size:calc(6px + 1.5vw);
     }
     body{
         height:90vh;
@@ -132,18 +132,26 @@ button{
     }
     .cards{
         height:40%;
+        width:90%;
         display:flex;
-        flex-flow:column-reverse
+        flex-flow:column-reverse;
+    }
+
+    .card{
+        max-width:300px;
     }
 
     .recto{
         margin:0;
-        
+        position:absolute;
+        z-index:1;
+        top:16vh;
     }
 
     .verso{
-        margin:0;
-    
+        position:absolute;
+        top:8vh;
+        margin-left:14vw;
     }
 
     section{
