--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
 
 *{
     font-family: 'Space Grotesk', sans-serif;
-    font-size:90%;
+    font-size:calc(5px + 0.6vw);
     letter-spacing:0.1em;
     text-transform:uppercase;
     color:hsl(278, 68%,11%);
@@ -26,11 +26,10 @@ main{
     width: 100% ;
     height:100% ;
     display:flex;
-    position:relative;
 }
 
 section{
-    width: 80% ;
+    width: 90% ;
     height:60% ;
     margin:auto;
     display:flex;
@@ -39,35 +38,110 @@ section{
 .cards{
     display:flex;
     flex-flow:column;
-    width: 50% ;
-    min-width: 250px;
-    position:relative,
+    align-items:center;
+    width:80%;
+    height:100%;
+    position:relative;
 }
 
 .card{
     border-radius:8px;
     margin:1em;
     height:20vw;
-    min-height:11em;
-    width:70%;
-    min-width: 250px;
+    width:80%;
+    max-width:430PX;
 }
 
 .recto{
-    
+    display:flex;
+    flex-flow:column;
     background:linear-gradient(45deg, blue, red);
-    margin-right:12vw
+    margin-right:12vw;
+    padding:1.5em;
 }
+
+.haut{
+    width:100%;
+    height:50%;
+    display:flex;
+    align-items:center;
+    padding-bottom:10%;
+}
+
+.rond{
+    border-radius:45px;
+}
+
+.rond-1{
+    width:3em;
+    height:3em;
+    background-color:white;
+    margin-right:1em;
+}
+
+.rond-2{
+    width:1.5em;
+    height:1.5em;
+    background-color:transparent;
+    border:solid white
+}
+
+.bas{
+    width:100%;
+    height:50%;
+    display:flex;
+    flex-flow:column;
+}
+
+.chiffre{
+    font-size:1.7em;
+    margin:auto;
+}
+
+.date-card{
+    display: flex;
+    justify-content:space-between;
+}
+
+p{
+    color:white
+}
+
 .verso{
-    background: hsl(279, 6%, 70%);
-    margin-left:10vw
-
+    background: hsl(279, 6%, 79%);
+    margin-left:10vw;
+    display:flex;
+    flex-flow:column;
 }
 
+span{
+    margin-top:1.5em;
+    width:100%;
+    height:20%;
+    background-color:black;
+}
+
+.span-g{
+    width:80%;
+    height:15%;
+    margin:auto;
+    margin-top:3%;
+    background-color:hsl(279, 6%, 49%);
+    border-radius:4px;
+    display:flex;
+    align-items:center;
+    padding:1em;
+    flex-flow:row-reverse;
+}
+
+.span-text{
+    text-align:right;
+    font-size:12px;
+}
 .formulaire{
-    width: 50% ;
+     
     height:100%;
-    padding:5em;;
+    padding:6em;;
     display:flex;
     flex-flow:column;
     justify-content:space-between;
@@ -88,6 +162,10 @@ section{
     width:50%;
 }
 
+.CVC{
+    width:47%;
+}
+
 .date-i{
     display:flex;
     justify-content:space-evenly;
@@ -100,7 +178,8 @@ input{
     height:80%;
     width:95%;
     margin:0.5rem;
-    padding:0.8rem;
+    padding:0.8em;
+    text-transform:none;
 }
 
 label{
@@ -109,7 +188,7 @@ label{
 
 button{
     color:white;
-    text-transform:normal;
+    text-transform:none;
     width:100%;
     height:13%;
     background:hsl(278, 68%, 21%);
@@ -120,38 +199,15 @@ button{
 @media screen and (max-width:800px){
 
     *{
-        font-size:calc(6px + 1.5vw);
+        font-size:calc(3px + 1.8vw);
     }
     body{
-        height:90vh;
+        height:100vh;
     }
     
     .color-background{
         width:100%;
         height:30%
-    }
-    .cards{
-        height:40%;
-        width:90%;
-        display:flex;
-        flex-flow:column-reverse;
-    }
-
-    .card{
-        max-width:300px;
-    }
-
-    .recto{
-        margin:0;
-        position:absolute;
-        z-index:1;
-        top:16vh;
-    }
-
-    .verso{
-        position:absolute;
-        top:8vh;
-        margin-left:14vw;
     }
 
     section{
@@ -159,7 +215,43 @@ button{
         width:100%;
         flex-flow:column;
         align-items:center;
+        margin-left:0px;
     }
+
+    .cards{
+        height:40%;
+        width:90%;
+    }
+
+    .card{
+        max-width:250px;
+        height:160px;
+    }
+
+    .recto{
+        margin:0;
+        position:absolute;
+        z-index:1;
+        top:18vh;
+        margin:0px;
+        margin-right:8vw;
+    }
+
+    .bas{
+        font-size:8px;
+    }
+
+    .p{
+        font-size:8px;
+    }
+
+    .verso{
+        position:absolute;
+        top:10%;
+        margin:0px;
+        margin-left:4vw;
+    }
+
 
     .formulaire{
         height:60%;
