--- a/style/style.css
+++ b/style/style.css
@@ -19,7 +19,7 @@ body{
     height:100vh;
     width: 35%;
     position:absolute;
-    background:linear-gradient(hsl(278, 68%, 11%),hsl(278, 94%, 30%),hsl(278, 68%, 11%));
+    background:linear-gradient(hsl(278, 68%, 11%),hsl(278, 94%, 30%),red);
 }
 
 main{
@@ -96,12 +96,17 @@ section{
 
 .chiffre{
     font-size:1.7em;
-    margin:auto;
+    margin-top:auto;
+    margin-bottom:auto;
 }
 
 .date-card{
     display: flex;
     justify-content:space-between;
+}
+
+.p-line{
+    display:flex;
 }
 
 p{
@@ -173,6 +178,13 @@ span{
     height:100%;
 }
 
+#alert-message{
+    display:none;
+    color:red;
+    text-transform:none;
+    margin-left:0.5rem
+}
+
 input{
     border : solid gray;
     border-radius:4px;
@@ -180,6 +192,7 @@ input{
     width:95%;
     margin:0.5rem;
     padding:0.8em;
+    margin-bottom:0px;
     text-transform:none;
 }
 
