--- a/style/style.css
+++ b/style/style.css
@@ -159,17 +159,30 @@ span{
 }
 
 .third{
-    display:flex;
-    flex-flow:row nowrap;
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     width:100%
 }
 
 .date{
-    width:50%;
+    grid-row:1/2;
+    width:100%;
+    height:60%;
 }
 
 .CVC{
-    width:47%;
+    grid-row:1/2;
+    width:95%;
+    height:60%;
+
+}
+
+#year-alert{
+    grid-column-start: 1;
+    grid-column-end: -1;
+    grid-row-start: 2;
+    grid-row-end: 2;
 }
 
 .date-i{
@@ -178,7 +191,7 @@ span{
     height:100%;
 }
 
-#alert-message{
+.alert-message{
     display:none;
     color:red;
     text-transform:none;
